--- a/TypeScript/AngularJS/mdPanel/mdPanelTemplate.html
+++ b/TypeScript/AngularJS/mdPanel/mdPanelTemplate.html
@@ -5,25 +5,25 @@
 
     @media(max-width: 3000px) {
         .bsi-panel {
-            width: 40% !important;
+            width: 40%;
         }
     }
 
     @media(max-width: 2500px) {
         .bsi-panel {
-            width: 50% !important;
+            width: 50%;
         }
     }
 
     @media(max-width: 2000px) {
         .bsi-panel {
-            width: 60% !important;
+            width: 60%;
         }
     }
 
     @media(max-width: 1200px) {
         .bsi-panel {
-            width: 80% !important;
+            width: 80%;
         }
     }
 </style>
